2006-04-09  David Reveman  <davidr@novell.com>

	* GL/glx/glxvisuals.c (init_visuals): Set EXT_tfp attributes properly.

	* GL/glx/glxserver.h: More temporary EXT_tfp defines.

	* GL/glx/glxcmds.c (__glXCreateARGBConfig): Set EXT_tfp attributes.
	(DoGetFBConfigs): Add GLX_DRAWABLE_TYPE and EXT_tfp attributes.
	(DoGetDrawableAttributes): Remove Y_INVERTED.

2006-04-08  David Reveman  <davidr@novell.com>

	* hw/xgl/xglsync.c (xglSyncSurface): Add very useful optimization
	for which avoids which makes pixels transfers much more efficient in
	some cases.

	* hw/xgl/Makefile.am (Xgl_DEPENDENCIES): Add libxgl.a.

2006-04-07  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglx.c (xglxDPMSSet): Set DPMSPowerLevel and
	clamp level.

2006-04-05  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c (xglInitExtensions): Fix glWindowPos3f
	proc address lookup.

	* hw/xgl/glx/xglx.c: Add xglxPointerProc and
	xglxChangePointerControl so that acceleration and threshold
	can be set properly.

2006-04-04  David Reveman  <davidr@novell.com>

	* hw/xgl/glx/xglxorg.c (xglxInitXorg): No need to try and disable
	dpms and screensaver with command line arguments as we now
	do that as part of detecting DPMS support in xglx.c.

	* hw/xgl/glx/xglx.c (xglxOsVendorInit): Check for DPMS,
	get default timeouts, disable current timeouts and screensaver.
	Add xglxDPMSSupported and xglxDPMSet for DPMS support.

	* hw/xgl/Makefile.am (Xgl_SOURCES): Remove dpmsstubs.c.

	* hw/xgl/egl/module/xeglmodule.c:
	* hw/xgl/egl/xegl.c:
	* hw/xgl/glx/module/xglxmodule.c:
	* hw/xgl/glx/xglx.c:
	* hw/xgl/xglinit.c: DPMS support by adding DPMSSupported
	and DPMSSet as ddx module functions.

	* hw/xgl/glx/xglx.c (xglxScreenInit): Re-install colormap
	after initializing software cursor (#6489). (Tiago Vignatti)

2006-04-03  David Reveman  <davidr@novell.com>

	* hw/xgl/Makefile.am (Xgl_LDADD): Static objects before dynamic
	objects (Hanno Boeck).

2006-03-31  David Reveman  <davidr@novell.com>
